// Vitest Snapshot v1

exports[`Radio > :props > align 1`] = `
<div
  class="t-radio"
>
  <span
    class="t-radio__content-wrap"
  >
    <span
      class="t-radio__icon-wrap t-radio__icon-left-wrap"
    >
      <input
        class="t-radio__original-left"
        name=""
        type="radio"
        value="false"
      />
      <div
        class="t-radio__icon"
      >
        
      </div>
    </span>
    <!--v-if-->
    <!--v-if-->
  </span>
  <!--下边框 -->
  <div
    class="t-radio__border t-radio__border--left"
  />
</div>
`;

exports[`Radio > :props > align 2`] = `
<div
  class="t-radio"
>
  <span
    class="t-radio__content-wrap"
  >
    <!--v-if-->
    <!--v-if-->
    <span
      class="t-radio__icon-wrap t-radio__icon-right-wrap"
    >
      <input
        class="t-radio__original-right"
        name=""
        type="radio"
        value="false"
      />
      <div
        class="t-radio__icon"
      >
        
      </div>
    </span>
  </span>
  <!--下边框 -->
  <div
    class="t-radio__border t-radio__border--right"
  />
</div>
`;

exports[`Radio > :props > checked 1`] = `
<div
  class="t-radio t-is-checked"
>
  <span
    class="t-radio__content-wrap"
  >
    <span
      class="t-radio__icon-wrap t-radio__icon-left-wrap"
    >
      <input
        class="t-radio__original-left"
        name=""
        type="radio"
        value="false"
      />
      <div
        class="t-radio__icon t-radio__icon--checked"
      >
        <svg
          class="t-icon t-icon-check"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M6.43 9.92l6.23-6.22.92.92-7.15 7.14L1.97 7.3l.92-.92 3.54 3.54z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </div>
    </span>
    <!--v-if-->
    <!--v-if-->
  </span>
  <!--下边框 -->
  <div
    class="t-radio__border t-radio__border--left"
  />
</div>
`;

exports[`Radio > :props > content 1`] = `
<div
  class="t-radio"
>
  <span
    class="t-radio__content-wrap"
  >
    <span
      class="t-radio__icon-wrap t-radio__icon-left-wrap"
    >
      <input
        class="t-radio__original-left"
        name=""
        type="radio"
        value="false"
      />
      <div
        class="t-radio__icon"
      >
        
      </div>
    </span>
    <span
      class="t-radio__label-wrap"
    >
      <!--v-if-->
      <div
        class="t-radio__content-inner"
      >
        <div>
          text
        </div>
      </div>
    </span>
    <!--v-if-->
  </span>
  <!--下边框 -->
  <div
    class="t-radio__border t-radio__border--left"
  />
</div>
`;

exports[`Radio > :props > content 2`] = `
<div
  class="t-radio"
>
  <span
    class="t-radio__content-wrap"
  >
    <span
      class="t-radio__icon-wrap t-radio__icon-left-wrap"
    >
      <input
        class="t-radio__original-left"
        name=""
        type="radio"
        value="false"
      />
      <div
        class="t-radio__icon"
      >
        
      </div>
    </span>
    <span
      class="t-radio__label-wrap"
    >
      <!--v-if-->
      <div
        class="t-radio__content-inner"
      >
        text
      </div>
    </span>
    <!--v-if-->
  </span>
  <!--下边框 -->
  <div
    class="t-radio__border t-radio__border--left"
  />
</div>
`;

exports[`Radio > :props > contentDisabled 1`] = `
<div
  class="t-radio"
>
  <span
    class="t-radio__content-wrap"
  >
    <span
      class="t-radio__icon-wrap t-radio__icon-left-wrap"
    >
      <input
        class="t-radio__original-left"
        name=""
        type="radio"
        value="false"
      />
      <div
        class="t-radio__icon"
      >
        
      </div>
    </span>
    <!--v-if-->
    <!--v-if-->
  </span>
  <!--下边框 -->
  <div
    class="t-radio__border t-radio__border--left"
  />
</div>
`;

exports[`Radio > :props > default 1`] = `
<div
  class="t-radio"
>
  <span
    class="t-radio__content-wrap"
  >
    <span
      class="t-radio__icon-wrap t-radio__icon-left-wrap"
    >
      <input
        class="t-radio__original-left"
        name=""
        type="radio"
        value="false"
      />
      <div
        class="t-radio__icon"
      >
        
      </div>
    </span>
    <span
      class="t-radio__label-wrap"
    >
      <span
        class="t-radio__content-title"
      >
        <div>
          text
        </div>
      </span>
      <!--v-if-->
    </span>
    <!--v-if-->
  </span>
  <!--下边框 -->
  <div
    class="t-radio__border t-radio__border--left"
  />
</div>
`;

exports[`Radio > :props > default 2`] = `
<div
  class="t-radio"
>
  <span
    class="t-radio__content-wrap"
  >
    <span
      class="t-radio__icon-wrap t-radio__icon-left-wrap"
    >
      <input
        class="t-radio__original-left"
        name=""
        type="radio"
        value="false"
      />
      <div
        class="t-radio__icon"
      >
        
      </div>
    </span>
    <span
      class="t-radio__label-wrap"
    >
      <span
        class="t-radio__content-title"
      >
        text
      </span>
      <!--v-if-->
    </span>
    <!--v-if-->
  </span>
  <!--下边框 -->
  <div
    class="t-radio__border t-radio__border--left"
  />
</div>
`;

exports[`Radio > :props > label 1`] = `
<div
  class="t-radio"
>
  <span
    class="t-radio__content-wrap"
  >
    <span
      class="t-radio__icon-wrap t-radio__icon-left-wrap"
    >
      <input
        class="t-radio__original-left"
        name=""
        type="radio"
        value="false"
      />
      <div
        class="t-radio__icon"
      >
        
      </div>
    </span>
    <span
      class="t-radio__label-wrap"
    >
      <span
        class="t-radio__content-title"
      >
        <div>
          text
        </div>
      </span>
      <!--v-if-->
    </span>
    <!--v-if-->
  </span>
  <!--下边框 -->
  <div
    class="t-radio__border t-radio__border--left"
  />
</div>
`;

exports[`Radio > :props > label 2`] = `
<div
  class="t-radio"
>
  <span
    class="t-radio__content-wrap"
  >
    <span
      class="t-radio__icon-wrap t-radio__icon-left-wrap"
    >
      <input
        class="t-radio__original-left"
        name=""
        type="radio"
        value="false"
      />
      <div
        class="t-radio__icon"
      >
        
      </div>
    </span>
    <span
      class="t-radio__label-wrap"
    >
      <span
        class="t-radio__content-title"
      >
        text
      </span>
      <!--v-if-->
    </span>
    <!--v-if-->
  </span>
  <!--下边框 -->
  <div
    class="t-radio__border t-radio__border--left"
  />
</div>
`;

exports[`Radio > :props > name 1`] = `
<div
  class="t-radio"
>
  <span
    class="t-radio__content-wrap"
  >
    <span
      class="t-radio__icon-wrap t-radio__icon-left-wrap"
    >
      <input
        class="t-radio__original-left"
        name=""
        type="radio"
        value="false"
      />
      <div
        class="t-radio__icon"
      >
        
      </div>
    </span>
    <!--v-if-->
    <!--v-if-->
  </span>
  <!--下边框 -->
  <div
    class="t-radio__border t-radio__border--left"
  />
</div>
`;

exports[`Radio > :props > value 1`] = `
<div
  class="t-radio"
>
  <span
    class="t-radio__content-wrap"
  >
    <span
      class="t-radio__icon-wrap t-radio__icon-left-wrap"
    >
      <input
        class="t-radio__original-left"
        name=""
        type="radio"
        value="true"
      />
      <div
        class="t-radio__icon"
      >
        
      </div>
    </span>
    <!--v-if-->
    <!--v-if-->
  </span>
  <!--下边框 -->
  <div
    class="t-radio__border t-radio__border--left"
  />
</div>
`;
